[project]
name = "powercons-etna"
version = "0.1.0"
description = "Time Series Clustering + ETNA Forecasting on PowerCons Dataset"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "tsfresh>=0.20.0",
    "tslearn>=0.6.3",
    "sktime>=0.14.0",
    "pingouin>=0.5.4",
    "dieboldmariano>=0.1.0",
    "dtaidistance>=1.3.0"
]

[tool.uv]
python-version = "3.11"
